--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
         import './index.css'
         import markdownIt from 'markdown-it'
         import text from './test.md?raw'
-        let md = markdownIt()
+        let md = markdownIt({
+            html: true,
+            linkify: true,
+            typographer: true
+        })
         let html = md.render(text)
         document.querySelector('main').innerHTML = html
     </script>
 </body>
 
 <style>
-
+    * {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+    }
 </style>
