--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 </head>
 
 <body>
-    <main class="markdown-body"></main>
+    <main>
+        <div class="markdown-body theme-light"></div>
+        <div class="markdown-body theme-dark"></div>
+    </main>
     <script type="module">
         import './index.css'
         import markdownIt from 'markdown-it'
@@ -15,7 +18,18 @@
             typographer: true
         })
         let html = md.render(text)
-        document.querySelector('main').innerHTML = html
+        let light = document.querySelector('main div:first-child')
+        let dark = document.querySelector('main div:last-child')
+        light.innerHTML = html
+        dark.innerHTML = html
+
+        light.addEventListener('scroll', () => {
+            dark.scrollTop = light.scrollTop
+        })
+        dark.addEventListener('scroll', () => {
+            light.scrollTop = dark.scrollTop
+        })
+
     </script>
 </body>
 
@@ -24,5 +38,18 @@
         margin: 0px;
         padding: 0px;
         box-sizing: border-box;
+    }
+
+    main {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+
+        >div {
+            flex: 1;
+            height: 100%;
+            overflow-y: auto;
+        }
     }
 </style>
